[B]2.1.0[/B]
- Better (i hope) search for fan artand imdb info (use imdb.aka for search)
- Include and use metadata.common.imdb.com
- Migrate source on GitHub (https://github.com/elbowz/mymovies-xbmc-scraper)

[B]2.0.4[/B]
- Fixed GetMovieTrailer for retrive italian trailer. (Issue 15: Alcuni trailer sono in inglese...)

[B]2.0.3[/B]
- Set mymovies.it internal search as default. Added <forum>, <website> and <source> tags for new xbmc addon section (addons.xbmc.org)

[B]2.0.2[/B]
- Added mymovies.it internal search, this option is activable in setting (thanks to mario.diraimondo for the patch - see issue 13)

[B]2.0.1[/B]
- Fixed trailer: Update regex for change in some films pages
- Added setting category: For more user-friendly scraper settings

[B]2.0.0[/B]
- Fixed fanart: GetTMDBFanartByIdChain url function to chain fuction (stefano85 request)

[B]1.1.9[/B]
- Added imdb id, not visible in film info but needed for trakt plugin (Tmac12 request)

[B]1.1.8[/B]
- Fixed regex: GetSearchResults (for change in google search report)

[B]1.1.7[/B]
- Added User Agent for error: "unable to connect to remote server"

[B]1.1.6[/B]
- Fixed regex: GetSearchResults, ParseImdbData (rating)

[B]1.1.5[/B]
- Fixed regex: trailer

[B]1.1.4[/B]
- Added base scale (vote/10) in direct vote, critics and the public. Proposed on forum.xbmc.org
- Now direct vote, critics and the public is only visible as "outline", beacuse studio and mpaa not present in mymovies are get from imdb. 
- Some minor fix

[B]1.1.3[/B]
- Fixed regex: title, trailer, runtime
- Added original title
- Search imdb id from google...not perfect but i hope better.
- Import info from IMDB (vote, mpaa, studio, top250). Deactivable from settings.

[B]1.1.2[/B]
- Fixed regex: rating and trailer
- Fixed url cache 

[B]1.1.1[/B]
- Change default films search url: http://www.google.it/search?q=film_name+site:mymovies.it
- Fixed trailer problem. The first and only issue reported on code.google.com ;)