@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.mymovies.it"
        name="MyMovies.it"
-       version="2.1.0"
+       version="2.2.0"
        provider-name="muttley">
   <requires>
     <import addon="xbmc.metadata" version="2.1.0"/>
@@ -24,12 +24,7 @@ Riporta problemi o suggerimenti su:
 
 Buona visione!
 	</description>
-    <description lang="en">
-Report problems or suggests on: 
-- https://code.google.com/p/mymovies-xbmc-scraper
-- http://forum.xbmc.org/showthread.php?t=58141
-
-Enjoy!
+    <description lang="en">Enjoy! :)
 	</description>
     <description lang="hu">Film információk letöltése a www.mymovies.it webhelyről</description>
     <description lang="kr">MyMovies.it 에서 영화 정보 다운로드</description>
@@ -37,8 +32,8 @@ Enjoy!
     <disclaimer>If the scraper is very slow, disable setting tagged with "(slow)".</disclaimer>
     <license>GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007</license>
     <forum>http://forum.xbmc.org/showthread.php?t=58141</forum>
-    <website>http://code.google.com/p/mymovies-xbmc-scraper/</website>
-    <source>http://code.google.com/p/mymovies-xbmc-scraper/source/checkout</source>
+    <website>https://github.com/elbowz/mymovies-xbmc-scraper</website>
+    <source>https://github.com/elbowz/mymovies-xbmc-scraper</source>
     <platform>all</platform>
   </extension>
 </addon>
